<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_edit_24"
        android:title="@string/editar"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_eliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_delete_forever_24"
        android:title="@string/eliminar"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_adicionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/adicionar"
        app:showAsAction="ifRoom" />
</menu>