<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MenuPrincipalFragment">

    <fragment
        android:id="@+id/MenuPrincipalFragment"
        android:name="pt.ipg.graficas.MenuPrincipalFragment"
        android:label="@string/menu_principal_label"
        tools:layout="@layout/fragment_menu_principal">

        <action
            android:id="@+id/action_MenuPrincipalFragment_to_SobreFragment"
            app:destination="@id/SobreFragment" />
        <action
            android:id="@+id/action_MenuPrincipalFragment_to_listaGraficasFragment"
            app:destination="@id/ListaGraficasFragment" />
    </fragment>
    <fragment
        android:id="@+id/SobreFragment"
        android:name="pt.ipg.graficas.SobreFragment"
        android:label="@string/sobre_fragment_label"
        tools:layout="@layout/fragment_sobre">

        <action
            android:id="@+id/action_SobreFragment_to_MenuPrincipalFragment"
            app:destination="@id/MenuPrincipalFragment" />
    </fragment>
    <fragment
        android:id="@+id/ListaGraficasFragment"
        android:name="pt.ipg.graficas.ListaGraficasFragment"
        android:label="@string/lista_graficas_label"
        tools:layout="@layout/fragment_lista_graficas">
        <action
            android:id="@+id/action_listaGraficasFragment_to_MenuPrincipalFragment"
            app:destination="@id/MenuPrincipalFragment" />
        <action
            android:id="@+id/action_ListaGraficasFragment_to_editarGraficaFragment"
            app:destination="@id/editarGraficaFragment" />
        <action
            android:id="@+id/action_ListaGraficasFragment_to_eliminarGraficaFragment"
            app:destination="@id/eliminarGraficaFragment" />
    </fragment>
    <fragment
        android:id="@+id/editarGraficaFragment"
        android:name="pt.ipg.graficas.EditarGraficaFragment"
        android:label="@string/nova_grafica_label"
        tools:layout="@layout/fragment_editar_grafica">
        <action
            android:id="@+id/action_editarGraficaFragment_to_ListaGraficasFragment"
            app:destination="@id/ListaGraficasFragment" />
        <argument
            android:name="grafica"
            app:argType="pt.ipg.graficas.graficao"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/eliminarGraficaFragment"
        android:name="pt.ipg.graficas.EliminarGraficaFragment"
        android:label="@string/eliminar_grafica_label"
        tools:layout="@layout/fragment_eliminar_grafica">
        <action
            android:id="@+id/action_eliminarGraficaFragment_to_ListaGraficasFragment"
            app:destination="@id/ListaGraficasFragment" />
        <argument
            android:name="grafica"
            app:argType="pt.ipg.graficas.grafica" />
    </fragment>
</navigation>